refactoring for Dockerfile

--- a/simurf/Dockerfile
+++ b/simurf/Dockerfile
@@ -14,25 +14,24 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY . .
+# Create non-root user
+RUN useradd --create-home --shell /bin/bash simurf
 
-# Create utils directory structure
-RUN mkdir -p utils test
+# Copy application code and set permissions
+COPY --chown=simurf:simurf main.py transmitter.py channel.py receiver.py test_sample.py usage_example.py ./
+COPY --chown=simurf:simurf utils/ ./utils/
 
-# Expose ports for packet I/O
-EXPOSE 12345 12346
+# Switch to non-root user
+USER simurf
 
 # Set environment variables
 ENV PYTHONPATH=/app
 ENV PYTHONUNBUFFERED=1
 
-# Create non-root user for security
-RUN useradd --create-home --shell /bin/bash simurf
-RUN chown -R simurf:simurf /app
-USER simurf
+# Expose ports
+EXPOSE 12345 12346
 
-# Health check
+# Health check (ensure your app listens on 12345)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD python -c "import socket; s=socket.socket(); s.settimeout(1); s.connect(('localhost', 12345)); s.close()" || exit 1
 
