--- a/simurf/requirements.txt
+++ b/simurf/requirements.txt
@@ -1,13 +1,6 @@
-# Core scientific computing
-numpy>=1.21.0
-scipy>=1.7.0
-
-# Signal processing and communications
-matplotlib>=3.5.0
-
-# Testing framework
-pytest>=6.0.0
-pytest-cov>=3.0.0
-
-# Logging and utilities
-colorlog>=6.0.0
+numpy==1.21.4
+scipy==1.7.3
+matplotlib==3.5.3
+pytest==6.2.5
+pytest-cov==3.0.0
+colorlog==6.6.0
