Updating Docker Files

--- a/Matlab/docker-compose.yml
+++ b/Matlab/docker-compose.yml
@@ -4,15 +4,9 @@ services:
     container_name: simurf-emulator
     network_mode: "host"
     privileged: true
-    volumes:
-      - ./simurf_data:/simurf
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     environment:
       - PYTHONUNBUFFERED=1
     restart: unless-stopped
-    cap_add:
-      - NET_ADMIN
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
