--- a/Matlab/Dockerfile
+++ b/Matlab/Dockerfile
@@ -1,35 +1,36 @@
-# Use an existing MATLAB runtime image or alternative
-FROM mathworks/matlab:r2023a-runtime
+FROM python:3.9-slim
 
-# Alternatively, you can use Ubuntu and install MATLAB Runtime manually
-# FROM ubuntu:20.04
-
-# Install Python and dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
-    python3 \
-    python3-pip \
     net-tools \
     iproute2 \
     tcpdump \
     iputils-ping \
-    wget \
-    curl \
+    procps \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
 RUN pip3 install numpy scipy scapy
 
-# Create working directory structure
+# Create working directory
 WORKDIR /simurf
 
-# Copy project files
-COPY matlab_components /simurf/matlab_components/
-COPY python_components /simurf/python_components/
-COPY scripts /simurf/scripts/
-COPY config /simurf/default_configs/
+# Copy ALL files from current directory
+COPY . .
 
-# Make scripts executable
-RUN chmod +x /simurf/scripts/*.sh
+# Verify files were copied
+RUN echo "🔍 Checking files in container..." && \
+    ls -la && \
+    echo "📁 python_components contents:" && \
+    ls -la python_components/ || echo "python_components not found!" && \
+    echo "📁 config contents:" && \
+    ls -la config/ || echo "config not found!"
 
-# Start SimuRF
-CMD ["/simurf/scripts/start_simurf.sh"]
+# Create directories
+RUN mkdir -p /simurf/input /simurf/output /simurf/logs
+
+# Set Python to not buffer output
+ENV PYTHONUNBUFFERED=1
+
+# Start the application
+CMD ["python3", "python_components/network_manager.py"]
