--- a/Matlab/docker-compose.yml
+++ b/Matlab/docker-compose.yml
@@ -10,3 +10,6 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
     restart: unless-stopped
+    volumes:
+      - /dev:/dev
+      - /proc:/proc
