--- a/Matlab/Dockerfile
+++ b/Matlab/Dockerfile
@@ -7,10 +7,12 @@ RUN apt-get update && apt-get install -y \
     tcpdump \
     iputils-ping \
     procps \
+    wget \
+    unzip \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies including MATLAB Engine API
-RUN pip3 install numpy scipy scapy matlabengine
+# Install Python dependencies (without matlabengine for now)
+RUN pip3 install numpy scipy scapy
 
 # Create working directory
 WORKDIR /simurf
@@ -24,5 +26,5 @@ RUN mkdir -p /simurf/input /simurf/output /simurf/logs /simurf/matlab_components
 # Set Python to not buffer output
 ENV PYTHONUNBUFFERED=1
 
-# Start with MATLAB-enhanced version
+# Start with Python-only version for now
 CMD ["python3", "python_components/network_manager_matlab.py"]
