--- a/Matlab/docker-compose.yml
+++ b/Matlab/docker-compose.yml
@@ -1,12 +1,51 @@
+version: '3.8'
+
 services:
-  simurf:
-    build: .
-    container_name: simurf-emulator
-    network_mode: "host"
-    privileged: true
-    cap_add:
-      - NET_ADMIN
-      - NET_RAW
+  # Sender Container - Generates UDP traffic
+  sender:
+    build:
+      context: .
+      dockerfile: Dockerfile.sender
+    container_name: simurf_sender
+    network_mode: host  # Uses localhost
+    environment:
+      - DESTINATION_IP=127.0.0.1
+      - DESTINATION_PORT=5000
+      - PACKET_RATE=10
+      - PAYLOAD_SIZE=1024
     volumes:
-      - /dev:/dev
-      - /proc:/proc
+      - ./logs:/logs
+    restart: unless-stopped
+
+  # Receiver Container - Receives and analyzes packets
+  receiver:
+    build:
+      context: .
+      dockerfile: Dockerfile.receiver
+    container_name: simurf_receiver
+    network_mode: host  # Uses localhost
+    environment:
+      - LISTEN_PORT=5000
+      - LOG_FILE=/logs/receiver.log
+    volumes:
+      - ./logs:/logs
+      - ./received_data:/received_data
+    restart: unless-stopped
+
+  # Analyzer Container - Real-time dashboard
+  analyzer:
+    build:
+      context: .
+      dockerfile: Dockerfile.analyzer
+    container_name: simurf_analyzer
+    network_mode: host  # Uses localhost
+    volumes:
+      - ./logs:/logs
+      - ./output:/output
+      - ./analysis:/analysis
+    ports:
+      - "8080:8080"
+    depends_on:
+      - sender
+      - receiver
+    restart: unless-stopped
