--- a/Matlab/config/matlab_channel_config.json
+++ b/Matlab/config/matlab_channel_config.json
@@ -4,5 +4,10 @@
   "modulation_scheme": "QPSK",
   "carrier_frequency": 2400000000,
   "sample_rate": 10000000,
-  "doppler_shift": 100
+  "doppler_shift": 100,
+  "use_fec": false,
+  "use_pulse_shaping": true,
+  "multipath_delays": [0, 10, 20],
+  "multipath_gains": [1.0, 0.5, 0.25],
+  "interference_power_db": -20
 }
