--- a/Matlab/config/network_config.json
+++ b/Matlab/config/network_config.json
@@ -1,5 +1,22 @@
 {
-  "input_interface": "wlp8s0",
-  "output_interface": "wlp8s0",
-  "max_packet_size": 1500
+  "mode": "udp",
+
+  "listen": {
+    "ip": "0.0.0.0",
+    "port": 5000
+  },
+
+  "forward": {
+    "host": "receiver",
+    "port": 5000
+  },
+
+  "max_packet_size": 65535,
+
+  "impairments": {
+    "enable": false,
+    "packet_loss_probability": 0.0,
+    "fixed_delay_ms": 0,
+    "jitter_ms": 0
+  }
 }
