--- a/Matlab/config/matlab_channel_config.json
+++ b/Matlab/config/matlab_channel_config.json
@@ -1,15 +1,10 @@
 {
-  "snr_db": 20,
+  "snr_db": 28,
+  "sample_rate": 1000000,
+  "doppler_shift": 20,
   "channel_model": "Rayleigh",
-  "modulation_scheme": "QPSK",
-  "sample_rate": 10000000,
-  "doppler_shift": 100,
-
-  "use_fec": false,
-  "use_pulse_shaping": true,
-
-  "multipath_delays": [0, 10, 20],
-  "multipath_gains": [1.0, 0.5, 0.25],
-
-  "interference_power_db": -20
+  "multipath_delays": [0],
+  "multipath_gains": [1.0],
+  "interference_power_db": -40,
+  "use_fec": true
 }
