--- a/Matlab/sender/Dockerfile.sender
+++ b/Matlab/sender/Dockerfile.sender
@@ -2,10 +2,12 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# shared is at project root
-COPY shared ./shared
+COPY shared /app/shared
+COPY sender /app/sender
+COPY config /app/config
 
-# sender_app.py is inside sender/
-COPY sender/sender_app.py .
+ENV PYTHONPATH=/app
 
-CMD ["python", "sender_app.py"]
+RUN pip install scapy
+
+CMD ["python", "sender/sender_app.py"]
